--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Loading...
+<!DOCTYPE html>
+<html>
+<head>
+<title>Izmir Games</title>
+</head>
+
+<body>
+<p> Izmir Games'e hoşgeldiniz </p>
+</body>
+
+</html>
