--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
 <head>
 <title>Izmir Games</title>
+
+	
+
 </head>
 
 <body>
-<p> Izmir Games'e hoşgeldiniz </p>
+	<center>
+		<p style="font-size: 40px; "> Welcome to Izmir Games </p><br/><br/>
+		<p style="font-size: 30px; "> Contact us through the e-mail address provided below: </p>
+		<p style="font-size: 30px; "> sbagdinli@gmail.com </p><br/>
+		<p style="font-size: 30px; "> You can view our <a href="privacy-policy.txt" style="font-size: 30px; "> Privacy Policy </a> through this link. </p>
+	</center>
 </body>
 
 </html>
